# rtfi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  LICENSE  Makefile  README.md  marketplace.json  pyproject.toml  rtfi_analytics_dashboard.html  spec.md
.claude/: settings.local.json
.claude-plugin/: CLAUDE.md  marketplace.json  plugin.json
.githooks/: commit-msg
.github/workflows/: ci.yml
agents/: session-analyzer.md
commands/: CLAUDE.md  check.md  checkpoint.md  dashboard.md  demo.md  health.md  risky.md  sessions.md  setup.md  show.md  status.md
docs/: ANALYSIS.md  ARCHITECTURE.md  CASE_STUDY.md  IMPLEMENTATION-PLAN.md  PRODUCT-BRIEF.md  TROUBLESHOOTING.md  starship-rtfi.toml  statusline.sh
docs/adr/: 0001-deterministic-risk-scoring.md  0002-fresh-process-per-hook.md  0003-agent-decay.md  0004-layered-configuration.md  0005-hmac-audit-trail.md  0006-module-consolidation.md  0007-checkpoint-detection.md
docs/brainstorms/: 2026-03-22-architecture-audit-brainstorm.md
docs/plans/: 2026-03-22-refactor-architecture-overhaul-plan.md
hooks/: CLAUDE.md  hooks.json
scripts/: dashboard.html  demo_compliance_check.py  demo_scenario.py  hook_handler.py  rtfi_cli.py  rtfi_core.py  rtfi_dashboard.py  rtfi_statusline.py  run_hook.sh  setup.sh  starship-claude-rtfi
scripts/rtfi/: __init__.py  metrics.py
scripts/rtfi/cli/: __init__.py  main.py
skills/risk-scoring/: SKILL.md
tests/: __init__.py  conftest.py  test_core.py  test_dashboard.py  test_hook_handler.py  test_integration.py  test_scoring.py  test_storage.py
(+6 files in other folders)
